# bimm

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
.run/: Docs.run.xml  Fix.run.xml  Format.run.xml  Nextest.run.xml  Test (cuda).run.xml  Test.run.xml
crates/bimm/: Cargo.toml  README.md
crates/bimm-firehose/: Cargo.toml
crates/bimm-firehose-image/: Cargo.toml
crates/bimm-firehose-image/src/: colortype_support.rs  lib.rs  loader.rs  test_util.rs
crates/bimm-firehose-image/src/augmentation/: mod.rs
crates/bimm-firehose-image/src/augmentation/control/: choose_one.rs  noop.rs  sequence.rs  with_prob.rs
crates/bimm-firehose-image/src/augmentation/noise/: blur.rs  speckle.rs
crates/bimm-firehose-image/src/augmentation/orientation/: flip.rs
crates/bimm-firehose-image/src/burn_support/: image_to_tensor_data.rs  mod.rs  pixeldepth_support.rs
crates/bimm-firehose/src/: lib.rs
crates/bimm-firehose/src/burn/: batcher.rs  path_scanning.rs
crates/bimm-firehose/src/core/: mod.rs  rows.rs  schema.rs  values.rs
crates/bimm-firehose/src/core/operations/: environment.rs  executor.rs  factory.rs  mod.rs  operator.rs  planner.rs  registration.rs  signature.rs
crates/bimm-firehose/src/ops/: mod.rs
crates/bimm-firehose/src/pipeline/: data_load_operator.rs  data_load_plan.rs  data_load_schedule.rs  data_schedule_source.rs
crates/bimm-firehose/src/utility/: probability.rs
crates/bimm/benches/: drop_block.rs
crates/bimm/src/: lib.rs
crates/bimm/src/cache/: disk.rs  mod.rs  prefabs.rs  weights.rs
crates/bimm/src/compat/: conv_shape.rs  mod.rs  normalization_wrapper.rs  ops.rs  type_mapper.rs
crates/bimm/src/layers/: mod.rs
crates/bimm/src/layers/activation/: activation_layer.rs  activation_wrapper.rs  mod.rs
crates/bimm/src/layers/blocks/: cna.rs  cna_block.rs  conv_norm.rs  mod.rs
crates/bimm/src/layers/drop/: drop_block.rs  drop_path.rs  mod.rs  rate_table.rs  size_config.rs
crates/bimm/src/layers/patching/: patch_embed.rs
crates/bimm/src/layers/pool/: avg_pool_2d_same.rs  mod.rs
crates/bimm/src/models/: mod.rs
crates/bimm/src/models/resnet/: basic_block.rs  blocks.rs  bottleneck.rs  bottleneck_block.rs  cna_basic_block.rs  cna_bottleneck.rs  cna_layer_block.rs  cna_residual_block.rs  cna_resnet_model.rs  conv_norm.rs  downsample.rs  layer_block.rs  mod.rs  prefab.rs  prefabs.rs  pretrained.rs  residual_block.rs  resnet_model.rs  scratch.py  stems.rs  util.rs
crates/bimm/src/models/resnet/resnet_io/: mod.rs  pytorch_stubs.rs
crates/bimm/src/models/swin/v2/: block_sequence.rs  mod.rs  patch_merge.rs  swin_block.rs  swin_model.rs  windowing.rs
crates/bimm/src/models/swin/v2/window_attention/: attention.rs  attention_mask.rs  mod.rs  pos_bias.rs  pos_grid.rs
crates/bimm/src/testing/: mod.rs
crates/bimm/src/utility/: mod.rs  probability.rs  results.rs  zspace.rs
crates/bimm/src/utility/burn/: clamp.rs  distribution.rs  kernels.rs  mod.rs  noise.rs  record.rs
examples/resnet-finetune/: Cargo.toml  README.md
examples/resnet-finetune/src/: dataset.rs  main.rs  training.rs
examples/resnet_finetune/: .gitignore  Cargo.toml  README.md
examples/resnet_finetune/src/: data.rs  dataset.rs  main.rs
examples/resnet_pretrained/: Cargo.toml  README.md
examples/resnet_pretrained/src/: main.rs
examples/resnet_tiny/: Cargo.toml  README.md
examples/resnet_tiny/src/: main.rs
examples/swin_tiny/: Cargo.toml  README.md
examples/swin_tiny/src/: main.rs
