[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*",
    "examples/*",
]

[workspace.package]
edition = "2024"
version = "0.3.6"
repository = "https://github.com/crutcher/bimm"
license = "MIT"
rust-version = "1.88.0"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "warn"


# Patch to enable the gradient clipping cherry-pick
# [patch.crates-io]
# burn_support = { git = "https://github.com/tracel-ai/burn", rev = "250d5530c21e03909bd27f6e294dddb63ea0f6c8" }

[workspace.dependencies]
burn = "^0.18.0"
burn-import = "^0.18.0"
dirs = "^6.0.0"

# bimm-contracts = "^0.4.2"
bimm-contracts = { branch = "main", git = "https://github.com/crutcher/bimm-contracts", version = "^0.4.3" }

# Burn coupled-dependencies
globwalk = "^0.9.1"
serde = "^1.0.223"
serde_json = "^1.0.145"

clap = "^4.5.47"

crc = "^3.3.0"

rand = "^0.9.2"
regex = "^1.11.2"
regex-macro = "^0.3.0"
anyhow = "^1.0.99"

image = "^0.25.8"

# macro dependencies
inventory = "^0.3.21"

# Test and/or Examples dependencies
criterion = "^0.7.0"
hamcrest = "^0.1.5"
image-compare = "^0.5.0"
indoc = "^2.0.6"
num-traits = "^0.2.19"
tempfile = "^3.22.0"

# Dataset files
csv = "^1.3.1"
flate2 = "^1.1.2"
tar = "^0.4.44"

