[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*",
    "examples/*",
]

[workspace.package]
edition = "2024"
version = "0.19.4"
repository = "https://github.com/crutcher/bimm"
license = "MIT"
rust-version = "1.88.0"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "warn"


[workspace.dependencies]
burn = "^0.19.0"
burn-import = "^0.19.0"
dirs = "^6.0.0"

# Bug in burn/cuda deps; pinned to force "nvrtc" for cudarc:
# > cudarc = { workspace = true, features = ["nvrtc"], optional = true }
cudarc = "0.16.6"

bimm-contracts = "^0.19.2"

# Burn coupled-dependencies
globwalk = "^0.9.1"
serde = "^1.0.228"
serde_json = "^1.0.145"

clap = "^4.5.51"

crc = "^3.3.0"

rand = "^0.9.2"
regex = "^1.12.2"
regex-macro = "^0.3.0"
anyhow = "^1.0.100"

image = "^0.25.8"

# macro dependencies
inventory = "^0.3.21"

# Test and/or Examples dependencies
criterion = "^0.7.0"
hamcrest = "^0.1.5"
image-compare = "^0.5.0"
indoc = "^2.0.7"
num-traits = "^0.2.19"
tempfile = "^3.23.0"

# Dataset files
csv = "^1.4.0"
flate2 = "^1.1.5"
tar = "^0.4.44"

