[package]
name = "bimm"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/bimm/latest/"
description = "burn image models"

[lints]
workspace = true

[dependencies]
bimm-contracts = { workspace = true, features = ["burn"] }

# There is a dep/gate bug that requires "ndarray" when using "network".
burn = { workspace = true, features = ["network", "ndarray"] }
dirs = { workspace = true }
burn-import = { workspace = true }

serde = { workspace = true, features = ["derive"] }

anyhow = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["autodiff"] }
hamcrest = { workspace = true }
indoc = { workspace = true }
criterion = { workspace = true }


[features]
default = []
# std = []
wgpu = ["burn/wgpu"]

[[bench]]
name = "drop_block"
harness = false
