[package]
name = "bimm"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/bimm/latest/"
description = "burn image models"

[lints]
workspace = true

[dependencies]
bunsen = { workspace = true, features = ["cache"] }
burn = { workspace = true, features = ["network", "store"] }
burn-store = { workspace = true, features = ["pytorch"] }

dirs = { workspace = true }

crc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

anyhow = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["autodiff"] }
hamcrest = { workspace = true }
indoc = { workspace = true }
criterion = { workspace = true }


[features]
default = []
std = []
cuda = ["burn/cuda", "bunsen/cuda"]

[[bench]]
name = "drop_block"
harness = false
