[package]
name = "resnet-finetune"
publish = false
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bimm = { version = "0.3.6", path = "../../crates/bimm" }

burn = { workspace = true, features = ["network", "train", "autodiff", "vision", "cuda"] }

clap = { workspace = true, features = ["derive"] }

# Dataset files
csv = { workspace = true }
flate2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
tar = { workspace = true }


[features]
default = []

