[package]
name = "resnet_finetune"
publish = false
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bimm = { version = "0.19.5", path = "../../crates/bimm" }

burn = { workspace = true, features = ["train", "fusion", "autotune", "network", "vision"] }

clap = { workspace = true, features = ["derive"] }

# Dataset files
csv = { workspace = true }
flate2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true }
tar = { workspace = true }

[features]
default = []
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
metal = ["burn/metal"]

