[package]
name = "resnet_tiny"
publish = false
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bimm = { version = "0.19.4", path = "../../crates/bimm" }
bimm-firehose = { version = "0.19.4", path = "../../crates/bimm-firehose" }
bimm-firehose-image = { version = "0.19.4", path = "../../crates/bimm-firehose-image" }

burn = { workspace = true, features = ["train", "fusion", "autotune", "vision", "dataset"] }
serde = { workspace = true, features = ["derive"] }

# Bug in burn/cuda deps; pinned to force "nvrtc" for cudarc:
cudarc = { workspace = true, features = ["nvrtc"], optional = true }

clap = { workspace = true, features = ["derive"] }

rand = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
metal = ["burn/metal"]
